<resources>
    <string name="app_name" translatable="false">SlyCalendarView</string>

    <string name="slycalendar_singledate" translatable="false">EE, dd MMMM</string>
    <string name="slycalendar_short" translatable="false">EE, dd</string>
    <string name="slycalendar_short_month" translatable="false">EE, dd MMM</string>
    <string name="slycalendar_dates_period" translatable="false">%1$s – %2$s</string>

    <string name="slycalendar_cancel">Cancel</string>
    <string name="slycalendar_confirm">Confirm</string>
    <string name="slycalendar_next">Next</string>
    <string name="slycalendar_prev">Prev</string>
    <string name="slycalendar_choose_range">Choose range</string>

</resources>
