<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/slycalendar_defBackgroundColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="21dp"
        android:paddingTop="13dp"
        android:paddingRight="21dp"
        android:paddingBottom="13dp"
        android:text="@string/slycalendar_choose_range"
        android:textColor="@color/slycalendar_defTitle"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/slycalendar_defHeaderColor"
        android:orientation="vertical"
        android:paddingLeft="21dp"
        android:paddingTop="21dp"
        android:paddingRight="21dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/slycalendar_defHeaderTextColor"
            android:textSize="16sp"
            tools:text="2019" />

        <TextView
            android:id="@+id/txtSelectedPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/slycalendar_defHeaderTextColor"
            android:textSize="20sp"
            tools:text="Пт, 7 июл. – Вт, 18 июл." />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.view.ViewPager
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnMonthPrev"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:contentDescription="@string/slycalendar_prev"
                android:foreground="?android:attr/actionBarItemBackground"
                android:padding="12dp"
                app:srcCompat="@drawable/slycalendar_chevron_left"
                tools:ignore="VectorDrawableCompat" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btnMonthNext"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="0"
                android:contentDescription="@string/slycalendar_next"
                android:foreground="?android:attr/actionBarItemBackground"
                android:padding="12dp"
                app:srcCompat="@drawable/slycalendar_chevron_right"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:fontFamily="@font/roboto_medium"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/slycalendar_cancel"
                android:textAllCaps="true"
                android:textColor="@color/slycalendar_defButtonsColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtSave"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:fontFamily="@font/roboto_medium"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/slycalendar_confirm"
                android:textAllCaps="true"
                android:textColor="@color/slycalendar_defButtonsColor"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>


</LinearLayout>